--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "helmet": "^3.22.0"
+    "helmet": "^3.22.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/express-handlebars": "^3.1.0",
     "@types/node": "^14.0.11",
+    "sequelize-cli": "^5.5.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
   }
